--- a/UNIDAD4/Worksheet 4b.md/CALCULADORA.HTML
+++ b/UNIDAD4/Worksheet 4b.md/CALCULADORA.HTML
@@ -6,26 +6,29 @@
   <link rel="stylesheet" href="./CALCULADORA.CSS">
 </head>
 <body>
-  <input type="text" id="pantalla" readonly>
-  <div class="botones">
-    <button class="numero">7</button>
-    <button class="numero">8</button>
-    <button class="numero">9</button>
-    <button class="operador">÷</button>
-    <button class="numero">4</button>
-    <button class="numero">5</button>
-    <button class="numero">6</button>
-    <button class="operador">x</button>
-    <button class="numero">1</button>
-    <button class="numero">2</button>
-    <button class="numero">3</button>
-    <button class="operador">-</button>
-    <button class="numero">0</button>
-    <button class="numero">.</button>
-    <button id="borrar">C</button>
-    <button id="igual">=</button>
+  <div>
+    <input type="text" id="pantalla" readonly>
+    <div class="botones">
+      <button class="numero">7</button>
+      <button class="numero">8</button>
+      <button class="numero">9</button>
+      <button class="operador">÷</button>
+      <button class="numero">4</button>
+      <button class="numero">5</button>
+      <button class="numero">6</button>
+      <button class="operador">x</button>
+      <button class="numero">1</button>
+      <button class="numero">2</button>
+      <button class="numero">3</button>
+      <button class="operador">-</button>
+      <button class="numero">0</button>
+      <button class="numero">.</button>
+      <button id="borrar">C</button>
+      <button id="igual">=</button>
+    </div>
+    <script src="CALCULADORA.JS"></script>
   </div>
-  <script src="CALCULADORA.JS"></script>
+ 
 
 </body>
 </html>
